[main] Generate API docs
